social media links updated

--- a/templates/index.html
+++ b/templates/index.html
@@ -198,10 +198,10 @@
 
   <!-- FOOTER -->
   <footer>
-    <a href="https://github.com/YOUR_GITHUB" target="_blank">
+    <a href="https://github.com/darshanbm26" target="_blank">
       <i class="fab fa-github"></i>
     </a>
-    <a href="https://linkedin.com/in/YOUR_LINKEDIN" target="_blank">
+    <a href="https://www.linkedin.com/in/darshanbm26/" target="_blank">
       <i class="fab fa-linkedin"></i>
     </a>
   </footer>
